<resources>
    <string name="app_name">パス管くん</string>

    <string name="navigation_drawer_open">メニューを開く</string>
    <string name="navigation_drawer_close">メニューを閉じる</string>

    <string name="action_settings">設定</string>
    <string name="menu_import">CSVファイルから読み込み</string>
    <string name="menu_export">CSVファイルに書き出し</string>
    <string name="menu_add_acc">アカウント情報を追加</string>
    <string name="memu_refresh">更新</string>
    <string name="action_delete">削除</string>
    <string name="action_update">更新</string>
    <string name="action_delete_all">すべて削除</string>
    <string name="action_add_acc">登録</string>
    <string name="label_acc_info">アカウント情報</string>
    <string name="content_id">ログインID</string>
    <string name="label_pass">パスワード</string>
    <string name="label_id">ログインID</string>
    <string name="label_url">URL</string>
    <string name="label_memo">備考</string>
    <string name="label_showall">すべてのアカウント</string>
    <string name="menu_utility">便利な機能</string>
    <string name="btn_back">戻る</string>
    <string name="btn_edit">編集</string>
    <string name="btn_del">削除</string>
    <string name="btn_save">保存</string>
    <string name="btn_cancel">キャンセル</string>
    <string name="label_title">表示名(必須)</string>
    <string name="label_edit">アカウント情報の編集</string>
    <string name="error_title_empty">表示名を入力してください</string>
    <string name="msg_coppied">コピーしました</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="msg_deleted">削除できました</string>
    <string name="msg_saved">保存しました</string>
    <string name="label_addnew">新しいアカウント情報の追加</string>
</resources>
